getting-started/1.0/networks/mainnet.md
# The Mainnet

**The Mainnet is the IOTA network that uses the IOTA tokens that are traded on cryptocurrency exchanges. This topic lists some practical information for connecting to the Mainnet.**

## Nodes

It's best practice to run your own node to have direct access to the Tangle, instead of relying on third-party nodes to receive your transactions. See the [Hornet node software](root://hornet/1.1/overview.md).

However, if you want to test the Mainnet, you can find a list of nodes on the following IOTA community websites:

- [iota.dance](https://iota.dance/)

- [thetangle.org](https://thetangle.org/nodes)

## Minimum weight magnitude

Transactions on the Mainnet must use a minimum weight magnitude (MWM) of at least 14 to be valid.

## Consensus rules

Nodes on the Mainnet use a Coordinator that is run by the IOTA Foundation with the following address:

```
EQSAUZXULTTYZCLNJNTXQTQHOMOFZERHTCGTXOLTVAHKSA9OGAZDEKECURBRIXIJWNPFCQIOVFVVXJVD9
```

